CHATS_SIT/force-app/main/default/objects/T_APPLN_PRCS_ADDNL_INFO__c.object
<CustomObject>
    <fields>
        <fullName>IDN_APPLN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>IDN_APPLN</description>
        <label>IDN_APPLN</label>
        <referenceTo>T_APPLN_CASE__c</referenceTo>
        <relationshipLabel>Application Processing Additional</relationshipLabel>
        <relationshipName>Application_case_38</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IND_FSPS_FOR_SENT_SIMULY__c</fullName>
        <description>IND_FSPS_FOR_SENT_SIMULY</description>
        <label>IND_FSPS_FOR_SENT_SIMULY</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_FSPS_RCVNG__c</fullName>
        <description>IND_FSPS_RCVNG</description>
        <label>IND_FSPS_RCVNG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_PENNA_183_TANF_RCVNG__c</fullName>
        <description>IND_PENNA_183_TANF_RCVNG</description>
        <label>IND_PENNA_183_TANF_RCVNG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_TANF_FOR_SENT_SIMULY__c</fullName>
        <description>IND_TANF_FOR_SENT_SIMULY</description>
        <label>IND_TANF_FOR_SENT_SIMULY</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IND_TANF_RCVNG__c</fullName>
        <description>IND_TANF_RCVNG</description>
        <label>IND_TANF_RCVNG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Application Processing Additional</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APA-{0}</displayFormat>
        <label>Application Processing Additional ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Processing Additional</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>